--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".janus/vim-solarized-powerline"]
 	path = .janus/vim-solarized-powerline
 	url = git@github.com:stephenmckinney/vim-solarized-powerline.git
+[submodule ".vim/bundle/vim-colors-solarized"]
+	path = .vim/bundle/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
