--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule ".vim/bundle/vim-objc"]
 	path = .vim/bundle/vim-objc
 	url = https://github.com/b4winckler/vim-objc.git
+[submodule ".vim/bundle/vim-xctool"]
+	path = .vim/bundle/vim-xctool
+	url = git@github.com:brow/vim-xctool.git
