--- a/.gitmodules
+++ b/.gitmodules
@@ -36,4 +36,4 @@
 	url = https://github.com/b4winckler/vim-objc.git
 [submodule ".vim/bundle/vim-xctool"]
 	path = .vim/bundle/vim-xctool
-	url = git@github.com:brow/vim-xctool.git
+	url = https://github.com/brow/vim-xctool.git
