--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-  email = tom@tombrow.com
+  email = tom@asana.com
   name = Tom Brow
 
 [alias]
@@ -7,6 +7,7 @@
   br = branch
   co = checkout
   sha = rev-parse --short HEAD
+  cp = cherry-pick
 
 [push]
   default = simple
