--- a/.tigrc
+++ b/.tigrc
@@ -8,7 +8,7 @@ bind main    V ?git revert %(commit)
 
 bind refs    ! !git branch -d %(branch)
 bind refs    D ?git branch -D %(branch)
-bind refs    p !git push %(branch)
+bind refs    p !git push %(remote) %(branch)
 bind refs    P ?git push -u %(remote) %(branch)
 bind refs    M ?git merge --no-ff %(branch)
 bind refs    L ?arc land %(branch)
@@ -17,6 +17,9 @@ bind status  A ?git add --all
 bind status  T ?git checkout --theirs %(file)
 bind status  O ?git checkout --ours %(file)
 bind status  M ?git commit --amend
+bind status  S ?git stash
+bind status  K ?git stash -k
+bind status  P ?git stash pop
 
 set main-view = line-number:no id:no date:no author:no commit-title:yes,graph,refs,overflow=no
 set refs-view = line-number:no id:no date:no author:no ref commit-title
