--- a/Alfred/Alfred.alfredpreferences/preferences/features/system/prefs.plist
+++ b/Alfred/Alfred.alfredpreferences/preferences/features/system/prefs.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>ejectKeywordEnabled</key>
 	<true/>
+	<key>ejectType</key>
+	<integer>1</integer>
 	<key>ejectallKeywordEnabled</key>
 	<true/>
 	<key>emptytrashKeywordEnabled</key>
