--- a/.inputrc
+++ b/.inputrc
@@ -1,2 +1,6 @@
 set completion-ignore-case On
-set editing-mode vi
+
+## arrow up
+"\e[A":history-search-backward
+## arrow down
+"\e[B":history-search-forward
