--- a/.tigrc
+++ b/.tigrc
@@ -21,6 +21,7 @@ bind status  S ?git stash
 bind status  K ?git stash -k
 bind status  P ?git stash pop
 bind status  U ?git reset %(file)
+bind status  L ?git clean -fd
 
 set main-view = line-number:no id:no date:no author:no commit-title:yes,graph,refs,overflow=no
 set refs-view = line-number:no id:no date:no author:no ref commit-title
