--- a/.inputrc
+++ b/.inputrc
@@ -1,6 +1,6 @@
 set completion-ignore-case On
 
-## arrow up
-"\e[A":history-search-backward
-## arrow down
-"\e[B":history-search-forward
+# ## arrow up
+# "\e[A":history-search-backward
+# ## arrow down
+# "\e[B":history-search-forward
