--- a/.yabairc
+++ b/.yabairc
@@ -14,34 +14,28 @@
 # sudo yabai --load-sa
 # yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
-# global settings
-yabai -m config mouse_follows_focus          off
-yabai -m config focus_follows_mouse          off
-yabai -m config window_placement             second_child
-yabai -m config window_topmost               off
-yabai -m config window_shadow                on
-yabai -m config window_opacity               off
-yabai -m config window_opacity_duration      0.0
-yabai -m config active_window_opacity        1.0
-yabai -m config normal_window_opacity        0.90
-yabai -m config window_border                off
-yabai -m config window_border_width          6
-yabai -m config active_window_border_color   0xff775759
-yabai -m config normal_window_border_color   0xff555555
-yabai -m config insert_feedback_color        0xffd75f5f
-yabai -m config split_ratio                  0.50
+# This can be set to either autofocus (window gets focused, but not raised) or
+# autoraise (window gets raised as if it was clicked on).
+yabai -m config focus_follows_mouse          autoraise
+
+# When yabai focuses another window, the mouse cursor gets moved to the center
+# of the focused window.
+yabai -m config mouse_follows_focus on
+
+# Floating windows are always on top (default: off)
+yabai -m config window_topmost on
+
+# Auto balance makes it so all windows always occupy the same space, independent
+# of how deeply nested they are in the window tree.
 yabai -m config auto_balance                 off
-yabai -m config mouse_modifier               fn
-yabai -m config mouse_action1                move
-yabai -m config mouse_action2                resize
-yabai -m config mouse_drop_action            swap
+
+# Ctrl-drag anywhere in window to resize it.
+yabai -m config mouse_modifier               ctrl
+yabai -m config mouse_action1                resize
 
 # general space settings
-yabai -m config layout                       bsp
-yabai -m config top_padding                  12
-yabai -m config bottom_padding               12
-yabai -m config left_padding                 12
-yabai -m config right_padding                12
-yabai -m config window_gap                   06
-
-echo "yabai configuration loaded.."
+yabai -m config top_padding                  5
+yabai -m config bottom_padding               5
+yabai -m config left_padding                 5
+yabai -m config right_padding                5
+yabai -m config window_gap                   5
