--- a/.yabairc
+++ b/.yabairc
@@ -8,10 +8,10 @@ yabai -m config focus_follows_mouse          autoraise
 
 # When yabai focuses another window, the mouse cursor gets moved to the center
 # of the focused window.
-yabai -m config mouse_follows_focus on
+yabai -m config mouse_follows_focus          on
 
 # Floating windows are always on top (default: off)
-yabai -m config window_topmost on
+yabai -m config window_topmost               on
 
 # Auto balance makes it so all windows always occupy the same space, independent
 # of how deeply nested they are in the window tree.
@@ -21,7 +21,7 @@ yabai -m config auto_balance                 off
 yabai -m config mouse_modifier               ctrl
 yabai -m config mouse_action1                resize
 
-# general space settings
+# Window margins
 yabai -m config top_padding                  2
 yabai -m config bottom_padding               2
 yabai -m config left_padding                 2
