--- a/.yabairc
+++ b/.yabairc
@@ -21,7 +21,7 @@ yabai -m config window_topmost               on
 yabai -m config auto_balance                 off
 
 # Ctrl-drag anywhere in window to resize it.
-yabai -m config mouse_modifier               ctrl
+yabai -m config mouse_modifier               cmd
 yabai -m config mouse_action1                resize
 
 # Window margins
