--- a/.yabairc
+++ b/.yabairc
@@ -30,3 +30,9 @@ yabai -m config bottom_padding               2
 yabai -m config left_padding                 2
 yabai -m config right_padding                2
 yabai -m config window_gap                   3
+
+
+# Windows to exclude from bsp
+yabai -m rule --add label="System Preferences" app="^System Preferences$" title=".*" manage=off
+yabai -m rule --add label="Software Update" title="Software Update" manage=off
+yabai -m rule --add label="About This Mac" app="System Information" title="About This Mac" manage=off
