--- a/.yabairc
+++ b/.yabairc
@@ -21,7 +21,7 @@ yabai -m config window_topmost               on
 yabai -m config auto_balance                 off
 
 # Ctrl-drag anywhere in window to resize it.
-yabai -m config mouse_modifier               cmd
+yabai -m config mouse_modifier               alt
 yabai -m config mouse_action1                resize
 
 # Window margins
@@ -30,7 +30,6 @@ yabai -m config bottom_padding               2
 yabai -m config left_padding                 2
 yabai -m config right_padding                2
 yabai -m config window_gap                   3
-
 
 # Windows to exclude from bsp
 yabai -m rule --add label="System Preferences" app="^System Preferences$" title=".*" manage=off
