--- a/.skhdrc
+++ b/.skhdrc
@@ -1,10 +1,10 @@
 # Focus
 cmd + ctrl - down :    yabai -m window --focus recent
 cmd + ctrl - left :    yabai -m window --focus prev || \
-                       yabai -m display --focus next
+                       yabai -m display --focus west
                        # yabai -m window --focus last
 cmd + ctrl - right :   yabai -m window --focus next || \
-                       yabai -m display --focus prev
+                       yabai -m display --focus east
                        # yabai -m window --focus first
 
 # Swap
