--- a/.yabairc
+++ b/.yabairc
@@ -35,3 +35,4 @@ yabai -m config window_gap                   3
 yabai -m rule --add label="System Preferences" app="^System Preferences$" title=".*" manage=off
 yabai -m rule --add label="Software Update" title="Software Update" manage=off
 yabai -m rule --add label="About This Mac" app="System Information" title="About This Mac" manage=off
+yabai -m rule --add title="Picture in Picture" manage=off
