Manual merge: update Claude settings and add zsh config
- Add ENABLE_TOOL_SEARCH env var to Claude settings
- Remove work-specific mcp__slack permissions
- Remove work-specific enabledPlugins section
- Add zsh config with vim mode, history search, and edit-command-line
- Skip Square-specific sources and RVM config

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -57,3 +57,6 @@ theme = light:GitHub Light Default,dark:GitHub Dark Default
 font-thicken = true
 # Thickening strength (0-255, higher = heavier)
 font-thicken-strength = 160
+
+# Consume cmd-enter without passing through
+keybind = cmd+enter=ignore
